--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "emailjs-com": "^3.2.0",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
     "mammoth": "^1.11.0",
     "motion": "^12.23.16",
+    "ogl": "^1.0.11",
     "pdfjs-dist": "^3.11.174",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.17.0",
     "tailwindcss": "^4.1.13",
     "three": "^0.180.0",
     "web-vitals": "^2.1.4"
